CRNT-23595: Queries with DataOrder applied for data values with type float/double (both for primitive and structured data) and type xsd:decimal (structured data only) are sorted by additional double_value column. Values in double_column are kept between value range returned by DbDescriptor.getNumericSQLTypeValueBorders(Class). This change requires creation of new schema or RTUpgradeJob applied on existing schema.
git-svn-id: http://emeafrazerg/svn/ipp/product/trunk/stardust/engine@60205 8100b5e0-4d52-466c-ae9c-bdeccbdeaf6b